Fix: Footer gap when the device height to tall

--- a/styles/bugreportStyle.css
+++ b/styles/bugreportStyle.css
@@ -235,6 +235,19 @@ textarea.input-effect {
 	width: 80%;
 }
 
+@media screen and (min-height: 930px) {
+	.background-bugreport {
+		height: 100vh;
+	}
+	.bug-report-container {
+		padding-top: 1rem;
+		padding-bottom: 5.25rem;
+	}
+	.hero-section {
+		padding-top: 8rem;
+	}
+}
+
 /* Tablet view */
 @media screen and (max-width: 768px) {
 	.hero-section {
